--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,11 +1,22 @@
 .button{
-  padding: 0.8rem 2rem;
+  /* padding: 0.8rem 2rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s;
+  font-weight: bold;
+  margin-right: 1rem; */
+  background-color: #f3eeee;
+  color: #000000;
+  padding: 0.5rem 2rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.3s;
   font-weight: bold;
   margin-right: 1rem;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .button:hover{
