--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -36,18 +36,16 @@ header {
   height: 100%;
   width: 50%;
   display: flex;
-  justify-content: flex-end;
-  padding: 10px 20px;
-}
-
-.notification {
-  margin-right: 25px;
+  justify-content: center;
+  gap: 20px;
 }
 
 .first-section {
   height: 100%; 
   padding: 20px;
 }
+
+
 
 h1 {
   margin: 10px;
