added page registration

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -40,6 +40,12 @@ header {
   gap: 20px;
 }
 
+.link{
+  display: block;
+  text-decoration: none;
+  text-align: center;
+}
+
 .first-section {
   height: 100%; 
   padding: 20px;
