--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -1,68 +1,41 @@
-body {
-  display: flex;
-  justify-content: center; /* Центрирование по горизонтали */
-  align-items: center; /* Центрирование по вертикали */
-  height: 100vh; /* Высота вьюпорта */
-  margin: 0; /* Убирает отступы */
-}
-.container{
-  background-color: rgb(238, 235, 233);
-  height: 400px;
-  width: 400px;
-  border-radius: 10px;
-  box-shadow: rgb(124, 123, 123) 1px 3px 4px 4px;
-
+.registration-container {
+    max-width: 400px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-.inner_container{
-  margin: 10px;
-  
+.registration-form {
+    display: flex;
+    flex-direction: column;
 }
 
-.input:hover{
-  background-color: #007BFF;
+.form-group {
+    margin-bottom: 15px;
 }
 
-.na{
-  display: flex;
-  flex-direction: column;
-  
+label {
+    margin-bottom: 5px;
 }
 
-h1{
-  text-align: center;
+input,
+select {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-
-.gender_option{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 5%;
+.input-error {
+    border-color: red;
 }
 
-
-.gender{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.error {
+    color: red;
+    font-size: 0.875em;
 }
 
-
-.container_input{
-  margin: 10px;
-}
-
-.label{
-  text-align: start;
-}
-
-button{
-  width: 100%;
-  padding: 5px;
-  background-color: #007BFF;
-  border-radius: 5px;
-  border: none;
-  margin-top: 10%;
+.message {
+    margin-top: 15px;
+    color: green;
 }
