--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -1,4 +1,4 @@
-.signin-container {
+.signinContainer{
     max-width: 400px;
     margin: auto;
     padding: 20px;
@@ -7,31 +7,31 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.signin-container h2 {
+.signinForm h2 {
     text-align: center;
     margin-bottom: 20px;
 }
 
-.signin-form {
+.signinForm {
     display: flex;
     flex-direction: column;
 }
 
-.form-group {
+.formGroup {
     margin-bottom: 15px;
 }
 
-.form-group label {
+.formGroup label {
     margin-bottom: 5px;
 }
 
-.form-group input {
+.formGroup input {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-.input-error {
+.inputError {
     border-color: red;
 }
 
