--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,15 +1,15 @@
 .home-container {
   height: 100vh;
-  
+
 }
 
 header {
   width: 100%;
   height: 300px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: #FDF7FF;
   padding: 20px;
-} 
+}
 
 .common-section-header {
   display: flex;
@@ -36,18 +36,16 @@ header {
   height: 100%;
   width: 50%;
   display: flex;
-  justify-content: flex-end;
-  padding: 10px 20px;
-}
-
-.notification {
-  margin-right: 25px;
+  justify-content: center;
+  gap: 20px;
 }
 
 .first-section {
-  height: 100%; 
+  height: 100%;
   padding: 20px;
 }
+
+
 
 h1 {
   margin: 10px;
